// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Users {
  id       Int      @id @default(autoincrement())
  username String   @unique
  email    String   @unique
  password String
  scores   Scores[]
}

model Scores {
  id          Int       @id @default(autoincrement())
  value       Int
  date        DateTime
  user        Users     @relation(fields: [user_id], references: [id])
  user_id     Int
  gametype    Gametypes @relation(fields: [gametype_id], references: [id])
  gametype_id Int       @unique
}

model Gametypes {
  id          Int     @id @default(autoincrement())
  name        String  @unique
  description String
  score       Scores?
}
