@startuml
'https://plantuml.com/class-diagram

entity User {
    *id : number <<generated>>
    *username : text
}

entity Scores {
    *id : number <<generated>>
    *game_type_id : number
    *user_id : number
    *score : number
}

entity GameType {
    *id : number <<generated>>
    *type : text
}

User ||--o{ Scores : has
Scores ||--|| GameType : belongs to

@enduml